--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,3 +1,4 @@
+// https://code.visualstudio.com/docs/editor/variables-reference
 {
   "version": "0.2.0",
   "configurations": [
@@ -5,7 +6,7 @@
       "type": "lua",
       "request": "launch",
       "name": "Debug",
-      "program": "lua -i ${fileDirname} ${fileDirname}/main.lua"
+      "program": "${fileDirname}/main.lua"
     }
   ]
 }
